--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@google/generative-ai": "^0.24.0",
     "@types/express": "^5.0.1",
     "@types/web": "^0.0.213",
+    "concurrently": "^9.1.2",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
