--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@google/generative-ai": "^0.24.0",
     "@types/express": "^5.0.1",
     "@types/web": "^0.0.213",
+    "axios": "^1.8.4",
     "concurrently": "^9.1.2",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "google-auth-library": "^9.15.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "ts-node": "^10.9.2",
