--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-media-recorder": "^1.7.1",
     "ts-node": "^10.9.2",
     "twilio": "^5.5.1",
     "vite": "^6.2.2"
