--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ dist-ssr
 *.sw?
 
 # Secrets
-# GeminiAPIKey.tsx
-# TwilioAPIKey.tsx
-# twilioAPIKey.tsx
-# twilioAPIKey.cjs
+GeminiAPIKey.tsx
+TwilioAPIKey.tsx
+twilioAPIKey.tsx
+twilioAPIKey.cjs
